ingress/ing/echo_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-api-ing
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: simpleapi.com.br
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: simple-api
              port:
                number: 3000
